--- a/geppetto/Views/Storyboards/Search/Search.storyboard
+++ b/geppetto/Views/Storyboards/Search/Search.storyboard
@@ -6,7 +6,6 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
-        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -19,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="SMh-gv-qwT">
-                                <rect key="frame" x="20" y="88" width="374" height="725"/>
+                                <rect key="frame" x="20" y="140" width="374" height="673"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="cce-SV-bzZ">
                                     <size key="itemSize" width="170" height="119"/>
@@ -27,36 +26,7 @@
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="weW-oO-ipk" customClass="TagCardCell" customModule="geppetto" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="170" height="119"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="h6s-Vg-GLu">
-                                            <rect key="frame" x="0.0" y="0.0" width="170" height="119"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="akS-aF-QEM" customClass="TagCard" customModule="geppetto" customModuleProvider="target">
-                                                    <rect key="frame" x="0.0" y="0.0" width="170" height="119"/>
-                                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" constant="170" id="5my-Ob-GsG"/>
-                                                        <constraint firstAttribute="width" secondItem="akS-aF-QEM" secondAttribute="height" multiplier="16:9" id="YnM-U9-kEZ"/>
-                                                    </constraints>
-                                                </view>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstAttribute="trailing" secondItem="akS-aF-QEM" secondAttribute="trailing" id="A3y-eJ-knY"/>
-                                                <constraint firstAttribute="bottom" secondItem="akS-aF-QEM" secondAttribute="bottom" id="TNp-Fx-kbU"/>
-                                                <constraint firstItem="akS-aF-QEM" firstAttribute="leading" secondItem="h6s-Vg-GLu" secondAttribute="leading" id="x5l-eM-MJ5"/>
-                                                <constraint firstItem="akS-aF-QEM" firstAttribute="top" secondItem="h6s-Vg-GLu" secondAttribute="top" id="yoI-TA-vKU"/>
-                                            </constraints>
-                                        </collectionViewCellContentView>
-                                        <size key="customSize" width="170" height="119"/>
-                                        <connections>
-                                            <outlet property="tagCard" destination="akS-aF-QEM" id="LFr-Sr-ME4"/>
-                                        </connections>
-                                    </collectionViewCell>
-                                </cells>
+                                <cells/>
                                 <connections>
                                     <outlet property="dataSource" destination="Y6W-OH-hqX" id="fnD-wH-xJR"/>
                                     <outlet property="delegate" destination="Y6W-OH-hqX" id="P0q-qz-Xm7"/>
@@ -74,6 +44,9 @@
                     </view>
                     <navigationItem key="navigationItem" title="Buscar" largeTitleDisplayMode="always" id="olm-6w-sbu"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="collectionView" destination="SMh-gv-qwT" id="LEH-Yc-CPm"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
